--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ AI_POLISH_PROVIDER=openai
 
 # ===== API KEYS =====
 # OpenAI API Key (if using OpenAI)
-OPENAI_API_KEY="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"
+OPENAI_API_KEY=""
 
 # Anthropic Claude API Key (if using Claude)
 #ANTHROPIC_API_KEY=your-anthropic-api-key-here
